packages/jobs-api/k8s/production/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  generation: 4
  labels:
    app: production
    release: production
    tier: web
    track: stable
  name: production
  namespace: jobs-api
spec:
  progressDeadlineSeconds: 2147483647
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: production
      release: production
      tier: web
      track: stable
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/application-secrets: ""
      creationTimestamp: null
      labels:
        app: production
        release: production
        tier: web
        track: stable
    spec:
      containers:
      - envFrom:
        - secretRef:
            name: production-secret
        image: IMAGE_URL
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 2
          httpGet:
            path: /
            port: 5000
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 15
        name: jobs-api
        ports:
        - containerPort: 5000
          name: web
          protocol: TCP
        readinessProbe:
          failureThreshold: 2
          httpGet:
            path: /
            port: 5000
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
        resources:
          limits:
            cpu: 500m
            memory: 400Mi
          requests:
            cpu: 100m
            memory: 90Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
