packages/jobs-api/k8s/production/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: production
    release: production
  name: production-jobs-api
  namespace: jobs-api
spec:
  ports:
  - name: web
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: production
    tier: web
  sessionAffinity: None
  type: ClusterIP
