packages/jobs-api/k8s/production/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.org/websocket-services: production-jobs-api
  labels:
    app: production
    release: production
  name: production-jobs-api
  namespace: jobs-api
spec:
  rules:
  - host: jobs.optimroute.com
    http:
      paths:
      - backend:
          serviceName: production-jobs-api
          servicePort: 5000
        path: /
  tls:
  - hosts:
    - jobs.optimroute.com
    secretName: production-jobs-api-tls
